--- a/templates/beats.redhat.repo.j2
+++ b/templates/beats.redhat.repo.j2
@@ -1,6 +1,6 @@
 [beats]
 name=Elastic repository for x.x packages
-baseurl={{ repo_url }}/yum
+baseurl={{ repo_url }}
 gpgcheck=1
 gpgkey=https://artifacts.elastic.co/GPG-KEY-elasticsearch
 enabled=1
