--- a/templates/beats.debian.repo.j2
+++ b/templates/beats.debian.repo.j2
@@ -1,6 +1,6 @@
 [beats]
 name=Elastic Beats Repository
-baseurl={{ repo_url }}/apt
+baseurl={{ repo_url }}
 enabled=1
 gpgkey={{ repo_key }}
 gpgcheck=1
